# AquilaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
aquila-engine/: CMakeLists.txt  aquila-engine-config.cmake
aquila-engine/include/: aq_camera.hpp  aq_mesh.hpp  aq_model_loader.hpp  aq_node.hpp  aq_vertex.hpp  aquila_engine.hpp  camera.hpp  init_engine.hpp  render_engine.hpp  vk_initializers.hpp  vk_mesh.hpp  vk_types.hpp
aquila-engine/include/editor/: aq_mesh_creator.hpp  aq_node_hierarchy_editor.hpp  file_browser.hpp
aquila-engine/include/scene/: aq_camera.hpp  aq_light.hpp  aq_material.hpp  aq_mesh.hpp  aq_model_loader.hpp  aq_node.hpp  aq_texture.hpp  aq_vertex.hpp
aquila-engine/include/util/: aq_memory_manager.hpp  vk_descriptor_set_builder.hpp  vk_initializers.hpp  vk_memory_manager_immediate.hpp  vk_memory_manager_retained.hpp  vk_resizable_buffer.hpp  vk_shaders.hpp  vk_types.hpp  vk_utility.hpp
aquila-engine/shaders/: color.frag.glsl  color.frag.spv  color.vert.glsl  color.vert.spv  lighting.glsl
aquila-engine/src/: CMakeLists.txt  aq_camera.cpp  aq_mesh.cpp  aq_model_loader.cpp  aq_node.cpp  aq_vertex.cpp  aquila_engine.cpp  camera.cpp  init_engine.cpp  pipeline_builder.cpp  pipeline_builder.hpp  render_engine.cpp  vk_initializers.cpp  vk_mesh.cpp  vk_types.cpp  vk_utility.hpp
aquila-engine/src/editor/: aq_mesh_creator.cpp  aq_node_hierarchy_editor.cpp  file_browser.cpp
aquila-engine/src/scene/: aq_camera.cpp  aq_light.cpp  aq_material.cpp  aq_mesh.cpp  aq_model_loader.cpp  aq_node.cpp  aq_texture.cpp  aq_vertex.cpp
aquila-engine/src/util/: aq_memory_manager.cpp  pipeline_builder.cpp  pipeline_builder.hpp  vk_descriptor_set_builder.cpp  vk_initializers.cpp  vk_memory_manager_immediate.cpp  vk_memory_manager_retained.cpp  vk_resizable_buffer.cpp  vk_shaders.cpp  vk_types.cpp  vk_utility.cpp  vk_utility.hpp
include/: camera.hpp  pipeline_builder.hpp  vk_engine.hpp  vk_init_engine.hpp  vk_initializers.hpp  vk_mesh.hpp  vk_render_engine.hpp  vk_types.hpp
sandbox/: CMakeLists.txt
sandbox/include/: camera_controller.hpp  gameplay_engine.hpp
sandbox/resources/: test_scene.blend  test_scene.fbx  test_scene.glb  test_scene.mtl
sandbox/src/: CMakeLists.txt  camera_controller.cpp  gameplay_engine.cpp  main.cpp
shaders/: color.frag.glsl  color.frag.spv  color.vert.glsl  color.vert.spv
src/: CMakeLists.txt  camera.cpp  main.cpp  pipeline_builder.cpp  vk_engine.cpp  vk_init_engine.cpp  vk_initializers.cpp  vk_mesh.cpp  vk_render_engine.cpp
